webshop sayfa düzeni bitirildi. sayfalar arasi gecis linkleri yapildi

--- a/product_a.html
+++ b/product_a.html
@@ -1,12 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <style>
+      body {
+        background-color: bisque;
+      }
+      .img-container {
+        float: left;
+        width: 20%;
+        padding: 2px;
+      }
+      table{
+        border-spacing: 30px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>A Kitabimizi inceleyebilirsiniz</h1>
+    <nav align="center">
+      <a href="./index.html">Anasayfa</a> |
+      <a href="./product_a.html">A kitabi</a> |
+      <a href="./product_b.html">B kitabi</a> |
+      <a href="./product_c.html">C kitabi</a>
+    </nav>
+    <br />
+    <div>
+      <table border="2px" width="75%" align="center">
+        <thead></thead>
+        <tbody align="center">
+          <tr>
+            <td>
+              <a href="./product_a.html">
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQstNtVsIOjMASEMlqKJ4dxX9ME7bMNAdaf3A&usqp=CAU"
+                  alt=""
+                  widht="100px"
+                  height="150px"
+                />
+                <figcaption>A kitabi</figcaption></a
+              >
+            </td>
+            <td>
+              <a href="./product_b.html">
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTklaqwjnqgUj4iNDiLAOyIpbsMfAAL4V0cQQ&usqp=CAU"
+                  alt=""
+                  widht="100px"
+                  height="150px"
+                />
+                <figcaption>B kitabi</figcaption></a
+              >
+            </td>
+            <td>
+              <a href="./product_c.html">
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1RY4EuCxNx3jF1E6Kg78ITwDxOmTrVpXegw&usqp=CAU"
+                  alt=""
+                  widht="100px"
+                  height="150px"
+                />
+                <figcaption>C kitabi</figcaption></a
+              >
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <br />
+    <div align="center">
+      <div class="img-container">
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQstNtVsIOjMASEMlqKJ4dxX9ME7bMNAdaf3A&usqp=CAU"
+          alt=""
+        />
+        <figcaption>A Kitabi</figcaption>
+      </div>
+      <br />
+      <div>
+        <h1>A Kitabi <del>35fr</del> <br> 25fr</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus fugiat
+          repellendus debitis, nisi rem voluptates libero, earum dolorem
+          mollitia voluptatum quos quis facilis ipsum animi rerum ratione optio
+          corrupti! Veritatis!
+        </p>
+      </div>
+    </div>
+    <fieldset>
+      <legend>Kitap A</legend>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam laborum
+      sunt, molestiae nisi dolores eius nesciunt aliquid facere, possimus eum
+      optio quo officiis neque illo veritatis perferendis, dignissimos sapiente.
+      <details>
+        <summary>Daha fazlasi icin buraya bakabilirsiniz</summary>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+        possimus inventore quisquam consectetur iusto sed ratione fugiat sunt
+        voluptatibus magnam perferendis accusamus, laboriosam impedit sapiente
+        id facilis neque sint iure! Mollitia minima eligendi asperiores ipsa?
+        Rem nemo animi nobis aspernatur dolor debitis hic voluptatibus incidunt
+        asperiores nihil, eum, quas quis porro dicta unde culpa delectus? Odio
+        repellat deserunt eos est. Fugiat sed iure doloremque nesciunt dolores,
+        quasi rem sapiente repellat amet nam nemo ullam? Excepturi sapiente
+        perferendis, libero debitis pariatur voluptas ipsam nulla. Consequatur
+        suscipit corporis necessitatibus fugit nesciunt quod! Autem consequatur
+        maiores, animi quidem corporis deleniti accusantium pariatur repellat
+        asperiores quae soluta quod ducimus iure, nostrum rem ipsa velit, quasi
+        quibusdam id voluptatum eveniet facilis nam sed. Quia, consequatur.
+        Doloremque animi quidem sunt laborum aperiam fugiat, et quod nulla
+        laboriosam deserunt at repellat. Eos harum ex, veritatis cumque libero
+        magnam reprehenderit accusamus mollitia eveniet expedita aliquam cum
+        sunt suscipit!
+      </details>
+    </fieldset>
+  </body>
 </html>
