--- a/product_b.html
+++ b/product_b.html
@@ -1,12 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <style>
+      body {
+        background-color: blueviolet;
+      }
+      .img-container {
+        float: left;
+        width: 20%;
+        padding: 2px;
+      }
+      table{
+        border-spacing: 30px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>B Kitabimizi inceleyebilirsiniz</h1>
+    <nav align="center">
+      <a href="./index.html">Anasayfa</a> |
+      <a href="./product_a.html">A kitabi</a> |
+      <a href="./product_b.html">B kitabi</a> |
+      <a href="./product_c.html">C kitabi</a>
+    </nav>
+    <br />
+
+    <div>
+      <table border="2px" width="75%" align="center">
+        <thead></thead>
+        <tbody align="center">
+          <tr>
+            <td>
+              <a href="./product_a.html">
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQstNtVsIOjMASEMlqKJ4dxX9ME7bMNAdaf3A&usqp=CAU"
+                  alt=""
+                  widht="100px"
+                  height="150px"
+                />
+                <figcaption>A kitabi</figcaption></a
+              >
+            </td>
+            <td>
+              <a href="./product_b.html">
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTklaqwjnqgUj4iNDiLAOyIpbsMfAAL4V0cQQ&usqp=CAU"
+                  alt=""
+                  widht="100px"
+                  height="150px"
+                />
+                <figcaption>B kitabi</figcaption></a
+              >
+            </td>
+            <td>
+              <a href="./product_c.html">
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1RY4EuCxNx3jF1E6Kg78ITwDxOmTrVpXegw&usqp=CAU"
+                  alt=""
+                  widht="100px"
+                  height="150px"
+                />
+                <figcaption>C kitabi</figcaption></a
+              >
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div> <br>
+    <div align="center">
+      <div class="img-container">
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTklaqwjnqgUj4iNDiLAOyIpbsMfAAL4V0cQQ&usqp=CAU"
+          alt=""
+        />
+        <figcaption>B Kitabi</figcaption>
+      </div>
+      <br />
+      <div>
+        <h1>B Kitabi <del>30fr</del> <br> 22fr</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus fugiat
+          repellendus debitis, nisi rem voluptates libero, earum dolorem
+          mollitia voluptatum quos quis facilis ipsum animi rerum ratione optio
+          corrupti! Veritatis!
+        </p>
+      </div>
+    </div>
+    <fieldset>
+      <legend>Kitap B</legend>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam laborum
+      sunt, molestiae nisi dolores eius nesciunt aliquid facere, possimus eum
+      optio quo officiis neque illo veritatis perferendis, dignissimos sapiente.
+      <details>
+        <summary>Daha fazlasi icin buraya bakabilirsiniz</summary>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, inventore
+        dolorem similique esse nam excepturi dolores impedit? Ipsa distinctio
+        qui aspernatur quibusdam porro nostrum, facere laudantium, dicta quos
+        suscipit provident. Sapiente harum accusantium officia dicta
+        necessitatibus omnis quos iure, repudiandae, commodi perspiciatis beatae
+        sequi aliquam ipsa quaerat iste ut qui enim culpa suscipit. Tempora
+        impedit recusandae, cum voluptas placeat iusto! Officiis, deleniti
+        nesciunt! Corporis ad obcaecati nostrum, aliquid nesciunt assumenda?
+        Sunt quod debitis dolorem eligendi a cum aut voluptates ad quibusdam
+        quos, vel esse iste veritatis corporis obcaecati recusandae voluptatem.
+        Atque dolorum recusandae soluta voluptatem earum tempora perspiciatis
+        aliquam nisi sit non, corporis reiciendis provident. Voluptatum autem
+        repudiandae similique molestias sed perferendis, quisquam magni nisi
+        molestiae eum asperiores quasi. Sit! Atque recusandae, eos illo corporis
+        non nisi nostrum harum doloribus ipsam. Dolores laboriosam minima saepe
+        sit nihil cum incidunt quaerat ad, aliquam provident sapiente maxime
+        odit eum quod quos ratione.
+      </details>
+    </fieldset>
+  </body>
 </html>
