--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       body {
         background-color: aqua;
       }
-      table{
+      table {
         border-spacing: 30px;
       }
     </style>
@@ -22,10 +22,10 @@
       <a href="./product_b.html">B kitabi</a> |
       <a href="./product_c.html">C kitabi</a>
     </nav>
-    <br /><br />
+    <br />
 
     <div>
-      <table border="2px" width="75%" align="center">
+      <table border="2px" width="90%" align="center">
         <thead></thead>
         <tbody align="center">
           <tr>
@@ -63,49 +63,58 @@
               >
             </td>
           </tr>
+          <tr>
+            <td colspan="3" style="border:none ;">
+              <fieldset>
+                <legend>Bütün kitaplarimiz</legend>
+                <details>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Dolorum illo soluta sed. Officia mollitia possimus explicabo.
+                  Ex commodi saepe impedit quam, suscipit consequatur labore
+                  porro perspiciatis maiores sit asperiores autem? Suscipit
+                  voluptatem eveniet earum incidunt veritatis! Temporibus enim
+                  unde velit sit necessitatibus, doloribus iusto quam nihil
+                  laboriosam libero aspernatur veniam ad cupiditate assumenda
+                  est dolor excepturi impedit veritatis fuga minus? Qui dolorum,
+                  mollitia quaerat labore veniam et enim sint molestias amet rem
+                  dolore quia id voluptatibus, placeat aspernatur vel earum!
+                  Mollitia assumenda consequatur deleniti repellendus culpa
+                  maxime nihil, quos magni? In, expedita placeat esse dicta
+                  delectus temporibus maiores possimus officiis dignissimos
+                  facere, cum incidunt cumque asperiores minima obcaecati, error
+                  modi velit blanditiis nesciunt! Ullam numquam voluptatum
+                  cupiditate fuga eius libero? Aspernatur accusamus praesentium
+                  ab voluptate, nam dolores magni distinctio, eius vitae
+                  expedita repellendus voluptas optio dicta libero ut,
+                  consectetur voluptates. Maiores blanditiis hic tempore alias
+                  animi optio et mollitia! Numquam!
+                  <summary>Daha fazlasi icin buraya bakabilirsiniz</summary>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Dolores omnis numquam mollitia soluta. Nostrum natus eveniet
+                  ipsum reprehenderit ad iste hic commodi aspernatur doloribus
+                  illo! Numquam itaque ad blanditiis doloremque? Minus
+                  necessitatibus eligendi hic dolore magnam velit iure, nesciunt
+                  est adipisci consequuntur dolorem! Dolorum, iure modi
+                  asperiores blanditiis quas magni veniam totam consequatur
+                  nihil reiciendis, pariatur ipsa. Nesciunt, ducimus molestiae.
+                  Aperiam alias nesciunt rerum voluptatibus iste explicabo
+                  quidem officia, non dicta commodi quis vel culpa a id,
+                  consequuntur possimus earum sed voluptate? Quisquam laboriosam
+                  deleniti impedit totam commodi sit consectetur. Eligendi
+                  voluptates, placeat iste animi deleniti recusandae impedit
+                  eaque fugiat doloremque nulla veritatis quidem repudiandae
+                  fugit repellendus illum, quos consectetur labore. Explicabo
+                  vitae assumenda nisi. Minus quod quaerat laborum consequatur!
+                  Necessitatibus rem veritatis, saepe corrupti, velit ullam
+                  adipisci id quas quae quam fugiat sapiente sed voluptatem.
+                  Nihil error doloribus commodi modi? Cumque temporibus odit
+                  quos, velit itaque ipsam molestias ducimus.
+                </details>
+              </fieldset>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
-    <br /><br />
-    <fieldset>
-      <legend>Bütün kitaplarimiz</legend>
-      <details>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum illo
-        soluta sed. Officia mollitia possimus explicabo. Ex commodi saepe
-        impedit quam, suscipit consequatur labore porro perspiciatis maiores sit
-        asperiores autem? Suscipit voluptatem eveniet earum incidunt veritatis!
-        Temporibus enim unde velit sit necessitatibus, doloribus iusto quam
-        nihil laboriosam libero aspernatur veniam ad cupiditate assumenda est
-        dolor excepturi impedit veritatis fuga minus? Qui dolorum, mollitia
-        quaerat labore veniam et enim sint molestias amet rem dolore quia id
-        voluptatibus, placeat aspernatur vel earum! Mollitia assumenda
-        consequatur deleniti repellendus culpa maxime nihil, quos magni? In,
-        expedita placeat esse dicta delectus temporibus maiores possimus
-        officiis dignissimos facere, cum incidunt cumque asperiores minima
-        obcaecati, error modi velit blanditiis nesciunt! Ullam numquam
-        voluptatum cupiditate fuga eius libero? Aspernatur accusamus praesentium
-        ab voluptate, nam dolores magni distinctio, eius vitae expedita
-        repellendus voluptas optio dicta libero ut, consectetur voluptates.
-        Maiores blanditiis hic tempore alias animi optio et mollitia! Numquam!
-        <summary>Daha fazlasi icin buraya bakabilirsiniz</summary>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores omnis
-        numquam mollitia soluta. Nostrum natus eveniet ipsum reprehenderit ad
-        iste hic commodi aspernatur doloribus illo! Numquam itaque ad blanditiis
-        doloremque? Minus necessitatibus eligendi hic dolore magnam velit iure,
-        nesciunt est adipisci consequuntur dolorem! Dolorum, iure modi
-        asperiores blanditiis quas magni veniam totam consequatur nihil
-        reiciendis, pariatur ipsa. Nesciunt, ducimus molestiae. Aperiam alias
-        nesciunt rerum voluptatibus iste explicabo quidem officia, non dicta
-        commodi quis vel culpa a id, consequuntur possimus earum sed voluptate?
-        Quisquam laboriosam deleniti impedit totam commodi sit consectetur.
-        Eligendi voluptates, placeat iste animi deleniti recusandae impedit
-        eaque fugiat doloremque nulla veritatis quidem repudiandae fugit
-        repellendus illum, quos consectetur labore. Explicabo vitae assumenda
-        nisi. Minus quod quaerat laborum consequatur! Necessitatibus rem
-        veritatis, saepe corrupti, velit ullam adipisci id quas quae quam fugiat
-        sapiente sed voluptatem. Nihil error doloribus commodi modi? Cumque
-        temporibus odit quos, velit itaque ipsam molestias ducimus.
-      </details>
-    </fieldset>
   </body>
 </html>
