--- a/product_c.html
+++ b/product_c.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Produckt C</title>
     <style>
       body {
         background-color: brown;
       }
-      .img-container {
-        float: left;
-        width: 20%;
-        padding: 2px;
-      }
-      table{
+
+      table {
         border-spacing: 30px;
       }
     </style>
@@ -29,12 +25,11 @@
     </nav>
     <br />
 
-    <div>
-      <table border="2px" width="75%" align="center">
-        <thead></thead>
-        <tbody align="center">
+    <div style="color: white">
+      <table border="2px" width="90%" align="center">
+        <thead align="center">
           <tr>
-            <td>
+            <td width="33%">
               <a href="./product_a.html">
                 <img
                   src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQstNtVsIOjMASEMlqKJ4dxX9ME7bMNAdaf3A&usqp=CAU"
@@ -45,7 +40,7 @@
                 <figcaption>A kitabi</figcaption></a
               >
             </td>
-            <td>
+            <td width="33%">
               <a href="./product_b.html">
                 <img
                   src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTklaqwjnqgUj4iNDiLAOyIpbsMfAAL4V0cQQ&usqp=CAU"
@@ -56,7 +51,7 @@
                 <figcaption>B kitabi</figcaption></a
               >
             </td>
-            <td>
+            <td width="33%">
               <a href="./product_c.html">
                 <img
                   src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1RY4EuCxNx3jF1E6Kg78ITwDxOmTrVpXegw&usqp=CAU"
@@ -68,54 +63,67 @@
               >
             </td>
           </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <div align="center">
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1RY4EuCxNx3jF1E6Kg78ITwDxOmTrVpXegw&usqp=CAU"
+                  alt=""
+                />
+                <figcaption>C Kitabi</figcaption>
+              </div>
+            </td>
+            <td colspan="2">
+              <div align="center">
+                <h1>
+                  C Kitabi <del>27fr</del> <br />
+                  18fr
+                </h1>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+                  fugiat repellendus debitis, nisi rem voluptates libero, earum
+                  dolorem mollitia voluptatum quos quis facilis ipsum animi
+                  rerum ratione optio corrupti! Veritatis!
+                </p>
+              </div>
+
+              <fieldset>
+                <legend>Kitap C</legend>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                nam laborum sunt, molestiae nisi dolores eius nesciunt aliquid
+                facere, possimus eum optio quo officiis neque illo veritatis
+                perferendis, dignissimos sapiente.
+                <details>
+                  <summary>Daha fazlasi icin buraya bakabilirsiniz</summary>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi
+                  rerum ea dicta adipisci! Ex omnis aliquam sit ratione impedit
+                  consequuntur iure. Voluptatem mollitia possimus at, expedita
+                  nobis tempora accusamus provident! A, maxime. Porro, fugit!
+                  Perferendis mollitia id quo iste, dolore, et officia deserunt
+                  magnam laudantium, accusamus in doloribus provident assumenda
+                  voluptatibus qui. Eius officiis non deleniti. Provident,
+                  quibusdam. Earum, qui. Minima dolore officiis laboriosam
+                  libero veniam. Adipisci totam fuga eos, aperiam, repellat
+                  distinctio quisquam tenetur accusamus maiores officia
+                  temporibus eveniet pariatur voluptates earum facere quo omnis
+                  numquam ea dolores molestias. Fuga blanditiis facilis
+                  asperiores cupiditate officiis neque explicabo. Labore minus
+                  illo expedita fugit quis qui magnam. Enim voluptatum eius,
+                  laudantium libero, dolore sed ab, illo vitae accusamus
+                  nesciunt id praesentium? Et quae sunt, maiores libero
+                  praesentium minus! Explicabo voluptatum voluptate incidunt
+                  fugiat natus asperiores iusto suscipit accusamus, rerum atque?
+                  Perspiciatis molestiae eaque, ratione consequuntur ipsum est
+                  incidunt enim accusamus nam.
+                </details>
+              </fieldset>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
     <br />
-    <div align="center">
-      <div class="img-container">
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1RY4EuCxNx3jF1E6Kg78ITwDxOmTrVpXegw&usqp=CAU"
-          alt=""
-        />
-        <figcaption>C Kitabi</figcaption>
-      </div>
-      <br />
-      <div>
-        <h1>C Kitabi <del>27fr</del> <br> 18fr</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus fugiat
-          repellendus debitis, nisi rem voluptates libero, earum dolorem
-          mollitia voluptatum quos quis facilis ipsum animi rerum ratione optio
-          corrupti! Veritatis!
-        </p>
-      </div>
-    </div>
-    <fieldset>
-      <legend>Kitap C</legend>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nam laborum
-      sunt, molestiae nisi dolores eius nesciunt aliquid facere, possimus eum
-      optio quo officiis neque illo veritatis perferendis, dignissimos sapiente.
-      <details>
-        <summary>Daha fazlasi icin buraya bakabilirsiniz</summary>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi rerum ea
-        dicta adipisci! Ex omnis aliquam sit ratione impedit consequuntur iure.
-        Voluptatem mollitia possimus at, expedita nobis tempora accusamus
-        provident! A, maxime. Porro, fugit! Perferendis mollitia id quo iste,
-        dolore, et officia deserunt magnam laudantium, accusamus in doloribus
-        provident assumenda voluptatibus qui. Eius officiis non deleniti.
-        Provident, quibusdam. Earum, qui. Minima dolore officiis laboriosam
-        libero veniam. Adipisci totam fuga eos, aperiam, repellat distinctio
-        quisquam tenetur accusamus maiores officia temporibus eveniet pariatur
-        voluptates earum facere quo omnis numquam ea dolores molestias. Fuga
-        blanditiis facilis asperiores cupiditate officiis neque explicabo.
-        Labore minus illo expedita fugit quis qui magnam. Enim voluptatum eius,
-        laudantium libero, dolore sed ab, illo vitae accusamus nesciunt id
-        praesentium? Et quae sunt, maiores libero praesentium minus! Explicabo
-        voluptatum voluptate incidunt fugiat natus asperiores iusto suscipit
-        accusamus, rerum atque? Perspiciatis molestiae eaque, ratione
-        consequuntur ipsum est incidunt enim accusamus nam.
-      </details>
-    </fieldset>
   </body>
 </html>
